AgriculturePresentation/wwwroot/web/css/style.css
/* ... */
/*--// blog Section --*/
/*-- Gallery Section --*/
.agile_gallery_grids{
	margin:2em 0 0;
}
.demo > li {float:left;list-style-type: none;margin: 10px;}
.demo > li img { width:265px; cursor:pointer;}
/*jquery.picEyes*/

.picshade {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
    height: 100%!important;
  background-color: #000;
  opacity: 0.91;
  filter: alpha(opacity=91);
  z-index: 99;
  display: none;
}

.pictures_eyes_close {
  position: fixed;
  top: 30px;
  right: 30px;
  display: inline-block;
  width:30px;
  height:30px;
  background: url(../images/close.png) no-repeat;
  z-index: 100;
  display: none;
}

.pictures_eyes {
  position: fixed;
  width: 100%;
  left: 0;
  top: 0;
  z-index: 199;
  display: none;
}

.pictures_eyes_in {
  position: relative;
  text-align: center;
}

.pictures_eyes_in img { max-height: 500px; }

.pictures_eyes_in .prev, .pictures_eyes_in .next {
  position: absolute;
  top: 50%;
  width: 51px;
  height: 51px;
  cursor: pointer;
}

.pictures_eyes_in .prev {
  left: 35px;
  background: url(../images/left1.png) no-repeat;
  background-size: 51px;
}

.pictures_eyes_in .next {
  right: 35px;
  background: url(../images/right1.png) no-repeat;
  background-size: 51px;
}

.pictures_eyes_indicators {
  position: fixed;
  left: 0;
  bottom: 15px;
  width: 100%;
  text-align: center;
  z-index: 299;
}

.pictures_eyes_indicators a {
  display: inline-block;
  width: 50px;
  height: 50px;
  margin: 6px 3px 0 3px;
  border: 1px solid #ddd;
  border-radius: 10px;
  box-shadow: 0 0 2px #000;
  filter: alpha(opacity=50);
  opacity: 0.5;
  overflow: hidden;
}

.pictures_eyes_indicators img { height: 50px; }

.pictures_eyes_indicators .current {
  filter: alpha(opacity=100);
  opacity: 1;
}
.gallery-grid1{
	position:relative;
	overflow:hidden;
	cursor:pointer;
}
.gallery-grid1 .p-mask, .row .product .vm-product-media-container .p-mask {
   opacity: 0;
    visibility: hidden;
    background: rgba(25, 24, 24, 0.8);
    bottom: 0%;
    position: absolute;
    padding: 1.3em 1.3em;
    width: 100%;
    -webkit-transform: translate3d( 0px, 100%, 0px );
    -moz-transform: translate3d( 0px, 100%, 0px );
    -ms-transform: translate3d( 0px, 100%, 0px );
    -o-transform: translate3d( 0px, 100%, 0px );
    transform: translate3d( 0px, 100%, 0px );
    -webkit-transition: all .5s ease 0s;
    -moz-transition: all .5s ease 0s;
    transition: all .5s ease 0s;
    text-align: left;
    border-bottom: 6px solid #f58703;
}
.gallery-grid1 .p-mask .p-desc{
    color: #a3a3a3;
    position: relative;
    display: block;
    margin-bottom: 10px;
    padding-bottom: 10px;
    font-size: 1em;
}
.gallery-grid1:hover .p-mask, .row .product:hover .p-mask {
    opacity: 1;
    visibility: visible;
    -webkit-transform: translate3d( 0px, 0px, 0px );
    -moz-transform: translate3d( 0px, 0px, 0px );
    -ms-transform: translate3d( 0px, 0px, 0px );
    -o-transform: translate3d( 0px, 0px, 0px );
    transform: translate3d( 0px, 0px, 0px );
}
.p-mask h4{
	color: #fff;
    font-size: 1.2em;
    text-decoration: none;
    line-height: 1.8em;
    text-transform: uppercase;
    font-weight: bold;
}
.p-mask p{
	margin: 0;
    color: #f5f5f5;
    line-height: 1.8em;
	font-size: 16px;
}
.p-mask span {
        color: #f58703;
}
.pictures_eyes_in {
    position: relative;
    text-align: center;
}
/*-- //Gallery Section --*/

/*--Contact --*/
div#contact h3 {
    color: #fbfafa;
}
.contact-agile{
	background:url("../images/contact.jpg") no-repeat 0px 0px;
	background-size:cover;
}
.contact-agile h4,.contact-agile h2{
    text-align: left;
    font-size: 22px;
    margin-bottom: 13px;
    color: #f58703;
}
.contact-left p {
    text-align: left;
    font-size: 14px;
    margin-bottom: 15px;
    color: #efe7e7;
}
.contact-agile p.heading-btm-w3ls,.sevices-w3layouts p.heading-btm-w3ls{
    color: #e7e3e3;
}
.contact-middle input[type="text"],.contact-middle input[type="email"],textarea {
    width: 100%;
    padding: 11px 20px;
    border: none;
    background: rgba(197, 192, 185, 0.37);
    color: #fff;
}
.contact-middle p {
    color: #cecece;
    font-weight: bold;
    margin-bottom: 4px;
    margin-left: 5px;
	font-size:16px;
}
.contact-middle input[type="text"] {
    margin-bottom: 1.2em;
}
input[type="text"]:focus,input[type="email"]:focus,textarea:focus{
	outline:none;
}
textarea {
    height: 74px;
    resize: none;
    width: 49%;
}
textarea:focus{
	outline:none;
}
.submit{
	float:right;
	margin-top:10px;
	 color: #000;
}
.submit .glyphicon{
	font-size:16px;
	border:none;
	padding:0;
}
.contact-middle input[type="submit"] {
    background: rgba(245, 135, 3, 0.39);
    /* border: 2px solid #f58703; */
    border: none;
    padding: 8px 20px;
    outline: none;
    font-size: 12px;
    font-weight: bold;
    color: #fff;
    margin-top: 20px;
}
.contact-middle input[type="submit"]:hover {
    background: #f58703;
    color: #fff;
}
.form-agileinfo {
    width: 48%;
    margin-right: 24px;
    float: left;
}
/*--//Contact --*/


/*--Map --*/
.map-w3ls iframe {
    width: 100%;
    height: 400px;
    border: none;
}
/*-- //Map--*/
/*-- Footer-Social-Icons --*/
.bottom-social-w3ls {
    padding: 1em 0em;
    background: #424242;
    text-align: center;
}
/*-- Footer-Social-Icons --*/
/*--copy-right--*/
.copy {
    text-align: center;
    background: #202020;
}
.copy p {
    color: #fff;
    font-size: 14px;
    letter-spacing: 1px;
    padding: 1em;
}
.copy p a {
    color: #f58703;
    text-decoration: none;
	transition: 0.5s all;
    -webkit-transition: 0.5s all;
    -moz-transition: 0.5s all;
    -o-transition: 0.5s all;
    -ms-transition: 0.5s all;
}
.copy p a:hover{
	color:#fff;
	transition: 0.5s all;
    -webkit-transition: 0.5s all;
    -moz-transition: 0.5s all;
    -o-transition: 0.5s all;
    -ms-transition: 0.5s all;
}
/* ... */

